package com.japhy.design;

/**
 * @author Japhy
 * @since 2020/6/10 18:41
 */
public interface Weapon {
}
