package com.japhy.design.t2;

/**
 * @author Japhy
 * @since 2020/11/5 14:57
 */
public class Axe implements Weapon {

    @Override
    public String toString() {
        return "Axe{}";
    }
}
