package com.japhy.design.t2;

/**
 * @author Japhy
 * @since 2020/11/5 14:58
 */
public class Bow implements Weapon {

    @Override
    public String toString() {
        return "Bow{}";
    }
}
